# chatterbox

./: app.py  pyproject.toml  requirements.txt
core/: tts.py  vc.py
core/models/s3gen/: decoder.py  flow.py  flow_matching.py  hifigan.py  s3gen.py  xvector.py
core/models/s3gen/matcha/: decoder.py  transformer.py
core/models/s3gen/transformer/: activation.py  attention.py  convolution.py  embedding.py  encoder_layer.py  positionwise_feed_forward.py  subsampling.py  upsample_encoder.py
core/models/s3gen/utils/: class_utils.py  mask.py  mel.py
core/models/s3tokenizer/: __init__.py  s3tokenizer.py
core/models/t3/: llama_configs.py  t3.py
core/models/t3/inference/: alignment_stream_analyzer.py  t3_hf_backend.py
core/models/t3/modules/: cond_enc.py  learned_pos_emb.py  perceiver.py  t3_config.py
core/models/tokenizer/: __init__.py  configs.py  tokenizer.py  utils.py
core/models/tokenizers/: tokenizer.py
core/models/voice_encoder/: melspec.py  voice_encoder.py
core/models/wavegen/: __init__.py  configs.py  wavegen.py
core/models/wavegen/components/: flow_matching.py  text_encoder.py
core/models/wavegen/modules/: decoder.py  f0_predictor.py  flow.py  flow_matching.py
core/models/wavegen/transformers/: upsample_encoder.py
core/models/wavegen/utilities/: class_utils.py
src/chatterbox_tts.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
